
$Id: changes.txt,v 1.35 2005/09/25 22:29:38 disconn3ct Exp $

----
MVDSV v0.19-CVS build 21?? (2005.09.??)
[server]
- initial FTE's QTV (FTV) support (from FTE by disconnect)
- build: removed define REGEX - can't build only with external regex lib
- new cmd dlistr, cmd dlistregex, cmd demolistr, cmd demolistregex -
  same as demolist, but use parameters as regex
- new commands:
    lastscores - same as cmd lastscores, but in server console
    dlist - same as demolist
    dlistr, demolistr, dlistregex, demolistregex - same as cmd dlistr
- new connectionless commands:
    dlist, demolist - same as cmd dlist (packet IP:PORT dlist)
    dlistr, demolistr, dlistregex, demolistregex - same as cmd dlistr
- added OpenBSD targets (by Claymore and VVD)
- fix for gratuitous frag updates when v.frags is fractional (from ZQuake by disconnect)
(Thanks to Spike)
- bugfix from 0.19: fullserverinfo was not sent to client if there was lw or ls userinfo keys
- 'cmd dlist' and 'cmd demolist' can show about 4000 demos in list now, but if serverinfo key
  status is not "Standby" or demo recording is in progress then showing only last 100 demos;
  was made some additional changes:
  - MAX_BACK_BUFFERS increased from 16 to 128 (EXPERIMENTAL)
  - MAX_REDIRECTMESSAGES increased from 4 to 128 (EXPERIMENTAL)
- bugfix from 0.160b: pause with sv_minping > 0 cause all players disconnected
(Thaks to Siberex)


----
MVDSV v0.19 build 2050 (2005.08.01)
[server]
- bugfix ktpro: posibility to crash ktpro from client
(Thaks to MoosemaN)
- bugfix from 0.179b: internal 'cmd dl' function used one queue for all players -
  made self queue for each player


----
MVDSV v0.18 build 2040 (2005.07.22)
- project cleaned up
[server]
- removed cvar sv_aim (by disconnect)
- only set the client to cs_spawned state AFTER we've verified his spawncount
(by disconnect from ZQuake)
- don't send to zombies (by disconnect from ZQuake)
[unix]
- bugfix from 0.179b: crashes while printing red text in some places